# Line-Following-Robot-ROS2

./: .gitignore  README.md  run.txt
src/line_bot_bringup/: CMakeLists.txt  package.xml
src/line_bot_bringup/config/: bridge_config.yaml  params.yaml
src/line_bot_bringup/launch/: robot_app.launch.py  sim.launch.py
src/line_bot_bringup/worlds/: track.sdf
src/line_bot_control/: package.xml  setup.cfg  setup.py
src/line_bot_control/line_bot_control/: line_node.py  robot_brain.py  sonar_node.py  visualize_node.py
src/line_bot_control/line_bot_control/drivers/: sonar_driver.py
src/line_bot_description/: CMakeLists.txt  package.xml
src/line_bot_description/urdf/: robot.urdf
